syntax = "proto3";
import "common.proto";

enum UdpMsgDownType {
    GAME_ENTITY_UPDATE = 0;
    GAME_ENTITY_REMOVED = 1;
}

message UdpMsgDownGameEntityUpdate {
    uint32 id = 1;
    GameEntityBaseType object_type = 2;
    optional Point location_current = 3;
    optional Point location_target = 4;
    optional float location_speed = 5;
    optional Point location_shape = 6;
    optional uint32 health_current = 7;
    bool is_self = 8;
}

message UdpMsgDownGameEntityRemoved {
    uint32 id = 1;
}

message UdpMsgDown {
    UdpMsgDownType _type = 1;
    optional UdpMsgDownGameEntityUpdate game_entity_update = 2;
    optional UdpMsgDownGameEntityRemoved game_entity_removed = 3;
}

message UdpMsgDownWrapper {
    uint64 server_time = 1;
    repeated UdpMsgDown messages = 2;
}